# YADM

./: Cargo.toml  README.md
src/: files.rs  main.rs
src/config/: file_config.rs  mod.rs  yadm_config.rs
