[package]
name = "yadm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = "4.6.0"
confy = "2.0.0"
dirs = "6.0.0"
gix = "0.81.0"
glob = "0.3.3"
notify = "8.2.0"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
symlink = "0.1.0"
toml = "1.1.0"
walkdir = "2.5.0"
